Creacion de interfaz y componentes

--- a/CotrolPacientes/src/app/components/add-control/add-control.component.css
+++ b/CotrolPacientes/src/app/components/add-control/add-control.component.css
@@ -26,3 +26,13 @@ h1{
   color: white;
 
 }
+#box2{
+  background-color: white;
+    margin-right: 27%;
+    padding: 2%;
+    border-radius: 2%;
+}
+
+#box3{
+      margin-bottom: 4%;
+}
