--- a/CotrolPacientes/src/app/components/sign-in/sign-in.component.html
+++ b/CotrolPacientes/src/app/components/sign-in/sign-in.component.html
@@ -6,7 +6,7 @@
   margin-top: 10%;
   padding: 3%;
   border-radius: 3%; background-color: #ffffffd4;">
-    <img src="https://cdn.pixabay.com/photo/2017/10/08/19/55/cruz-2831364_960_720.png" style=" width:30%" class="rounded mx-auto d-block" >
+    <img src="assets/veterinario.png" style=" width:30%" class="rounded mx-auto d-block" >
     <h5 class="card-title">Inicio de Sesión</h5>
 
         <form>
