--- a/CotrolPacientes/src/app/components/dashboard/dashboard.component.html
+++ b/CotrolPacientes/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 <!-- Top navigation -->
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0">
-      <img class="brand-logo" src="" alt="Logo">
+      <img class="brand-logo" src="https://cdn.pixabay.com/photo/2017/10/08/19/55/cruz-2831364_960_720.png"  style="width: 17%;" alt="Logo">
     </a>
   </nav>
 
@@ -11,23 +11,43 @@
   <div class="container-fluid">
     <div class="row">
 
-      <nav class="col-md-2 d-md-block bg-light sidebar">
+
+
+      <nav class="col-md-2 d-md-block bg-dark sidebar" id="menu">
+        <!-- Show user data when logged in -->
+        <div class="row" *ngIf="authService.userData as user">
+          <div class="col-md-12" id="box1">
+            <div class="media">
+              <img  id="img_perfil" src="{{(user.photoURL) ? user.photoURL : '/assets/dummy-user.png'}}"
+                alt="{{user.displayName}}">
+            </div>
+            <span><strong>{{(user.displayName) ? user.displayName : 'User'}}</strong></span>
+
+          </div>
+        </div>
+
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active">
-                <i class="fas fa-user"></i>User Profile
+              <a class="nav-link text-light" routerLink="/dashboard">
+                <i class="fas fa-user"></i> <img src="assets/usuario.png" class="icon" alt="">User Profile
+                <hr>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="https://agunlarpart1.web.app/">
-                <i class="fas fa-prescription"></i>Agregar Estudiante
+              <a class="nav-link text-light"  routerLink="/add-control">
+
+                <i class="fas fa-prescription"></i>  <img src="assets/pata.png" class="icon" alt=""> Agregar Expediente
+                <hr>
               </a>
             </li>
+
+            <hr>
             <!-- Calling SignOut() Api from AuthService -->
             <li class="nav-item">
-              <a class="nav-link" (click)="authService.SignOut()">
-                <i class="fas fa-sign-out-alt"></i>Log out
+              <a class="nav-link text-light" (click)="authService.SignOut()">
+                <i class="fas fa-sign-out-alt"></i><img src="assets/flecha.png" class="icon" alt=""> Log out
+                <hr>
               </a>
             </li>
           </ul>
@@ -45,11 +65,10 @@
           <div class="row" *ngIf="authService.userData as user">
             <div class="col-md-12">
               <div class="media">
-                <img class="align-self-start mr-5 img-thumbnail rounded-circle" src="{{(user.photoURL) ? user.photoURL : '/assets/dummy-user.png'}}"
+                <img   src="{{(user.photoURL) ? user.photoURL : '/assets/dummy-user.png'}}"
                   alt="{{user.displayName}}">
-                <div class="media-body">
+                <div class="media-body" id="caja_info">
                   <h1>Hello: <strong>{{(user.displayName) ? user.displayName : 'User'}}</strong></h1>
-                  <p>User ID: <strong>{{user.uid}}</strong></p>
                   <p>Email: <strong>{{user.email}}</strong></p>
                   <p>Email Verified: <strong>{{user.emailVerified}}</strong></p>
                 </div>
