Data table aplicado, y correccion de codigo

--- a/CotrolPacientes/src/app/components/add-control/add-control.component.html
+++ b/CotrolPacientes/src/app/components/add-control/add-control.component.html
@@ -27,14 +27,14 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link text-light" routerLink="/dashboard">
-                            <i class="fas fa-user"></i> <img src="assets/usuario.png" class="icon" alt="">User Profile
+                             <img src="assets/usuario.png" class="icon" alt="">User Profile
                             <hr>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" routerLink="/add-control">
 
-                            <i class="fas fa-prescription"></i> <img src="assets/pata.png" class="icon" alt=""> Agregar Expediente
+                             <img src="assets/pata.png" class="icon" alt=""> Agregar Expediente
                             <hr>
                         </a>
                     </li>
@@ -43,7 +43,7 @@
                     <!-- Calling SignOut() Api from AuthService -->
                     <li class="nav-item">
                         <a class="nav-link text-light" (click)="authService.SignOut()">
-                            <i class="fas fa-sign-out-alt"></i><img src="assets/flecha.png" class="icon" alt=""> Log out
+                            <img src="assets/flecha.png" class="icon" alt=""> Log out
                             <hr>
                         </a>
                     </li>
@@ -63,38 +63,10 @@
                 <div id="box2" class="container">
 
                     <app-control-list></app-control-list>
-                    <!--<div class="col-md-12">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
-                                    <td>@twitter</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>-->
+                    
+
+                    <div class="container">
+</div>
 
                 </div>
 
