--- a/CotrolPacientes/src/app/components/dashboard/dashboard.component.html
+++ b/CotrolPacientes/src/app/components/dashboard/dashboard.component.html
@@ -30,14 +30,14 @@
           <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link text-light" routerLink="/dashboard">
-                <i class="fas fa-user"></i> <img src="assets/usuario.png" class="icon" alt="">User Profile
+              <img src="assets/usuario.png" class="icon" alt="">User Profile
                 <hr>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-light"  routerLink="/add-control">
 
-                <i class="fas fa-prescription"></i>  <img src="assets/pata.png" class="icon" alt=""> Agregar Expediente
+                 <img src="assets/pata.png" class="icon" alt=""> Agregar Expediente
                 <hr>
               </a>
             </li>
@@ -46,7 +46,7 @@
             <!-- Calling SignOut() Api from AuthService -->
             <li class="nav-item">
               <a class="nav-link text-light" (click)="authService.SignOut()">
-                <i class="fas fa-sign-out-alt"></i><img src="assets/flecha.png" class="icon" alt=""> Log out
+                <img src="assets/flecha.png" class="icon" alt=""> Log out
                 <hr>
               </a>
             </li>
